--- a/.github/workflows/uploadtest.yml
+++ b/.github/workflows/uploadtest.yml
@@ -7,8 +7,11 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - run: mkdir -p path/to/artifact
+
+    - run: echo hello > path/to/artifact/world.txt
+
     - uses: actions/upload-artifact@v2
       with:
         name: my-artifact
-        path: data/covid19za_provincial_confirmed_rt.csv
+        path: path/to/artifact/world.txt
