--- a/.github/workflows/uploadtest.yml
+++ b/.github/workflows/uploadtest.yml
@@ -7,11 +7,21 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-    - run: mkdir -p path/to/artifact
+    - run: mkdir -p data
 
-    - run: echo hello > path/to/artifact/world.txt
+    - run: echo hello > data/world.txt
 
     - uses: actions/upload-artifact@v2
       with:
         name: my-artifact
         path: path/to/artifact/world.txt
+        
+    - name: Commit changes
+      uses: EndBug/add-and-commit@v4
+      with:
+        author_name: Schalk
+        author_email: schalkv@heerden.com
+        message: "Rt notebook run"
+        add: "data/world.txt"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
