--- a/.github/workflows/uploadtest.yml
+++ b/.github/workflows/uploadtest.yml
@@ -7,6 +7,9 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout repo
+      uses: actions/checkout@v2
+          
     - run: mkdir -p data
 
     - run: echo hello > data/world.txt
