--- a/.github/workflows/run_rt.yaml
+++ b/.github/workflows/run_rt.yaml
@@ -8,11 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python
-
-    - run: mkdir -p data
-
-    - uses: actions/setup-python@v1
+      uses: actions/setup-python@v1
 
     - uses: yaananth/run-notebook@v1
       env:
