--- a/.github/workflows/realtime_r0_action.yaml
+++ b/.github/workflows/realtime_r0_action.yaml
@@ -20,6 +20,11 @@ jobs:
     - name: Ensure data directory exist
       run: mkdir -p data/calc
 
+    - name: Setup Python Dependencies
+      run:
+        python -m pip install --upgrade pip
+        python -m pip install pandas numpy matplotlib scipy IPython
+
     - name: Run Jupyter notebook and export csv
       uses: yaananth/run-notebook@v1
       env:
