--- a/.github/workflows/realtime_r0_action.yaml
+++ b/.github/workflows/realtime_r0_action.yaml
@@ -21,9 +21,9 @@ jobs:
       run: mkdir -p data/calc
 
     - name: Setup Python Dependencies
-      run:
+      run: |
         python -m pip install --upgrade pip
-        python -m pip install pandas numpy matplotlib scipy IPython
+        pip install pandas numpy matplotlib scipy IPython
 
     - name: Run Jupyter notebook and export csv
       uses: yaananth/run-notebook@v1
