--- a/.github/workflows/realtime_r0_action.yaml
+++ b/.github/workflows/realtime_r0_action.yaml
@@ -1,12 +1,12 @@
 on:
   #push
   push:
-    branches:
-      - master_za
+    #branches:
+    #  - master
     #tags:
     #  - dailyfinal
-    #paths:
-    #  - data/covid19za_provincial_cumulative_timeline_confirmed.csv
+    paths:
+      - data/covid19za_provincial_cumulative_timeline_confirmed.csv
 
 jobs:
   run:
@@ -14,18 +14,18 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Python
+    - name: Setup Python
       uses: actions/setup-python@v1
 
-    - name: Ensure data directory exist
+    - name: Ensure Data Directory Exists
       run: mkdir -p data/calc
 
     - name: Setup Python Dependencies
-      run: |
+      run:
         python -m pip install --upgrade pip
-        pip install pandas numpy matplotlib scipy IPython
+        python -m pip install pandas numpy matplotlib scipy IPython
 
-    - name: Run Jupyter notebook and export csv
+    - name: Run Jupyter Notebook and Export csv
       uses: yaananth/run-notebook@v1
       env:
         RUNNER: ${{ toJson(runner) }}
@@ -37,12 +37,12 @@ jobs:
         isReport: False
         poll: True
 
-    - name: Commit csv changes
+    - name: Commit csv Changes
       uses: EndBug/add-and-commit@v4
       with:
         author_name: Schalk
         author_email: schalkv@heerden.com
-        message: "Rt notebook run"
+        message: "Ro notebook action run"
         add: "data/calc/calculated_r0_sa_provincial_cumulative.csv"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
