--- a/.github/workflows/realtime_r0_action.yaml
+++ b/.github/workflows/realtime_r0_action.yaml
@@ -23,7 +23,7 @@ jobs:
     - name: Setup Python Dependencies
       run:
         python -m pip install --upgrade pip
-        python -m pip install pandas numpy matplotlib scipy IPython
+        pip install pandas numpy matplotlib scipy IPython
 
     - name: Run Jupyter Notebook and Export csv
       uses: yaananth/run-notebook@v1
