--- a/.github/workflows/realtime_r0_action.yaml
+++ b/.github/workflows/realtime_r0_action.yaml
@@ -21,7 +21,7 @@ jobs:
       run: mkdir -p data/calc
 
     - name: Setup Python Dependencies
-      run:
+      run: |
         python -m pip install --upgrade pip
         pip install pandas numpy matplotlib scipy IPython
 
