--- a/.github/workflows/realtime_r0_action.yaml
+++ b/.github/workflows/realtime_r0_action.yaml
@@ -32,7 +32,7 @@ jobs:
         SECRETS: ${{ toJson(secrets) }}
         GITHUB: ${{ toJson(github) }}
       with:
-        notebook: "Realtime R0 ZA.ipynb"
+        notebook: "notebooks/Realtime R0.ipynb"
         params: ""
         isReport: False
         poll: True
@@ -40,7 +40,7 @@ jobs:
     - name: Commit csv Changes
       uses: EndBug/add-and-commit@v4
       with:
-        author_name: Schalk
+        author_name: "Schalk van Heerden"
         author_email: schalkv@heerden.com
         message: "Ro notebook action run"
         add: "data/calc/calculated_r0_sa_provincial_cumulative.csv"
