--- a/.github/workflows/realtime_rt_action.yaml
+++ b/.github/workflows/realtime_rt_action.yaml
@@ -39,6 +39,11 @@ jobs:
         isReport: False
         poll: True
 
+    - name: Calc Debug
+      run: |
+        cd data/calc
+        ls
+
     - name: Commit csv Changes
       uses: EndBug/add-and-commit@v4
       with:
