--- a/.github/workflows/realtime_rt_action.yaml
+++ b/.github/workflows/realtime_rt_action.yaml
@@ -68,9 +68,9 @@ jobs:
         # Optional local file path to the repository
         #repository: .
         # Optional commit user and author settings
-        #commit_user_name: My GitHub Actions Bot
-        #commit_user_email: my-github-actions-bot@example.org
-        #commit_author: Author <actions@github.com>
+        commit_user_name: heerden
+        commit_user_email: schalkv@heerden.com
+        commit_author: heerden <schalkv@heerden.com>
         # Optional tag message
         # Action will create and push a new tag to the remote repository and the defined branch
         #tagging_message: 'v1.0.0'
